<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">cosmetics</string>
    <string name="StyleCosmetics">Style Cosmetics</string>
    <string name="BeautyCenter">Beauty Center</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Donthaveaccount">Don\'t have account?</string>
    <string name="SignUp">Sign Up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Home">Home</string>
    <string name="Products">Products</string>
    <string name="MyOrders">My Orders</string>
    <string name="More">More</string>
    <string name="FeaturedServices">Featured Services</string>
    <string name="FeaturedProducts">Featured Products</string>
    <string name="View_all">View all</string>
    <string name="BeautySalon">Beauty Salon</string>
    <string name="Add_to_cart">Add  to  cart</string>
    <string name="Product">Product</string>
    <string name="Rate_product">Rate product</string>
    <string name="Say_some_thing_about_products">Say some thing about products</string>
    <string name="Profile">Profile</string>
    <string name="Favorite">Favorite</string>
    <string name="Language">Language</string>
    <string name="Logout">Log out</string>
    <string name="Full_name">Full name</string>
    <string name="Phone">Phone</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="Continue_as_guest">Continue as guest</string>
    <string name="or_login_with">Or Login With</string>
    <string name="Category">Category</string>
    <string name="Brands">Brands</string>
    <string name="Email_Or_Password_is_previously_Used">User Email or password is previously used</string>
    <string name="Check_the_fields_you_entered">Check the fields you entered</string>
    <string name="Colors">Colors</string>
    <string name="Pleaseloginfirst">Please, login first!</string>
    <string name="Qty">Qty</string>
    <string name="Price">Price</string>
    <string name="Check_network_connection">Check network connection!</string>
    <string name="sub_total">sub total </string>
    <string name="Tax">Tax </string>
    <string name="Delivery_fees">Delivery fees </string>
    <string name="Cart_is_impty">Cart is impty !</string>
    <string name="Cart">Cart</string>
    <string name="enter_password_with_at_least_five_numbers">Please, enter your password  with at least five numbers!</string>
    <string name="Invalid_email">Invalid email address!</string>
    <string name="Get_my_location">Get my location</string>
    <string name="OrderNow">Order Now</string>
    <string name="Address">Address</string>
    <string name="Country">Country</string>
    <string name="City">City</string>
    <string name="Street">Street</string>
    <string name="SomeNotes">Some Notes</string>
    <string name="CheckOut">Check Out</string>
    <string name="Please_enter_your_phone_number">Please, enter your phone number!</string>
    <string name="Please_enter_your_address">Please, enter your address!</string>
    <string name="Please_enter_your_country">Please, enter your country!</string>
    <string name="Rate">Rate</string>
    <string name="InProgress">In Progress</string>
    <string name="Delivered">Delivered</string>
    <string name="Canceled">Canceled</string>
    <string name="Items">Items</string>
    <string name="payment_method">Payment method</string>
    <string name="Deliveryaddress">Delivery address</string>
</resources>