<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".activity.LoginActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
   >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_117sdp"
        android:background="@drawable/copy"/>
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="@dimen/_73sdp"
        android:layout_height="@dimen/_73sdp"
        android:background="@drawable/group_39"
        android:layout_marginStart="@dimen/_33sdp"
        android:layout_marginTop="@dimen/_68sdp"/>
    <TextView
        android:id="@+id/T_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_logo"
        android:text="@string/StyleCosmetics"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/_20sdp"
        android:textColor="#c6498f"

        />
    <android.support.v7.widget.CardView
        android:id="@+id/card_email"
        android:layout_below="@+id/T_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_17sdp"
        android:layout_marginStart="@dimen/_36sdp"
        android:layout_marginEnd="@dimen/_36sdp"
        app:cardCornerRadius="@dimen/_18sdp"
        app:cardBackgroundColor="#fff"
        app:cardElevation="@dimen/_2sdp"
        >
    <EditText
        android:id="@+id/ET_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:hint="@string/Email"
        android:textColorHint="#b6b6b6"
        android:textColor="#b6b6b6"
        android:textSize="@dimen/_13sdp"
        android:backgroundTint="#fff"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:gravity="center"
        />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_password"
        android:layout_below="@+id/card_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_36sdp"
        android:layout_marginEnd="@dimen/_36sdp"
        app:cardCornerRadius="@dimen/_18sdp"
        app:cardBackgroundColor="#fff"
        app:cardElevation="@dimen/_2sdp"
        >
        <EditText
            android:id="@+id/ET_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:hint="@string/Password"
            android:textColorHint="#b6b6b6"
            android:textColor="#b6b6b6"
            android:textSize="@dimen/_13sdp"
            android:backgroundTint="#fff"
            android:maxLines="1"
            app:passwordToggleEnabled="true"
            android:inputType="textPassword"
            android:gravity="center"
            />
    </android.support.v7.widget.CardView>


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:background="@drawable/btn_login"
        android:layout_marginStart="@dimen/_36sdp"
        android:layout_marginEnd="@dimen/_36sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/_13sdp"
        android:textColor="#fff"
        android:text="@string/Login"
        android:textAllCaps="false"
        android:layout_below="@id/card_password"
        android:clickable="true"
        />

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/btn_login"
    android:layout_marginStart="@dimen/_55sdp"
    android:layout_marginEnd="@dimen/_55sdp"
    android:layout_marginTop="@dimen/_20sdp"
    android:id="@+id/rel_sign_up">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Donthaveaccount"
        android:textSize="@dimen/_16sdp"
        android:textColor="#b6b6b6"
        android:id="@+id/T_no_account"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignUp"
        android:textSize="@dimen/_16sdp"
        android:textColor="#b6b6b6"
        android:layout_toEndOf="@+id/T_no_account"
        android:layout_marginStart="@dimen/_7sdp"
        />
</RelativeLayout>


    <ImageView
        android:id="@+id/ic_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/_12sdp"
        android:layout_marginStart="130dp"
        android:src="@drawable/facebook" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="13dp"
        android:layout_marginEnd="120dp"
        android:src="@drawable/search" />
</RelativeLayout>
</RelativeLayout>