<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.OrderNowFragment">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_93sdp"
            android:background="@drawable/copy"/>
        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:background="@drawable/group_39"
            android:layout_marginStart="@dimen/_33sdp"
            android:layout_marginTop="@dimen/_57sdp"/>
        <TextView
            android:id="@+id/T_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_logo"
            android:text="@string/StyleCosmetics"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/_16sdp"
            android:textColor="#c6498f"

            />

        <android.support.v7.widget.CardView
            android:id="@+id/card_phone"
            android:layout_below="@+id/T_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_36sdp"
            android:layout_marginEnd="@dimen/_36sdp"
            app:cardCornerRadius="@dimen/_18sdp"
            app:cardBackgroundColor="#fff"
            app:cardElevation="@dimen/_2sdp"
            >
            <EditText
                android:id="@+id/ET_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:hint="@string/Phone"
                android:textColorHint="#b6b6b6"
                android:textColor="#b6b6b6"
                android:textSize="@dimen/_13sdp"
                android:backgroundTint="#fff"
                android:maxLines="1"
                android:gravity="center"
                android:inputType="phone"
                />
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/card_address"
            android:layout_below="@+id/card_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_36sdp"
            android:layout_marginEnd="@dimen/_36sdp"
            app:cardCornerRadius="@dimen/_18sdp"
            app:cardBackgroundColor="#fff"
            app:cardElevation="@dimen/_2sdp"
            >
            <EditText
                android:id="@+id/ET_address"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:hint="@string/Address"
                android:textColorHint="#b6b6b6"
                android:textColor="#b6b6b6"
                android:textSize="@dimen/_13sdp"
                android:inputType="text"
                android:backgroundTint="#fff"
                android:maxLines="1"
                android:gravity="center"
                />
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/card_country"
            android:layout_below="@+id/card_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_36sdp"
            android:layout_marginEnd="@dimen/_36sdp"
            app:cardCornerRadius="@dimen/_18sdp"
            app:cardBackgroundColor="#fff"
            app:cardElevation="@dimen/_2sdp"
            >
            <EditText
                android:id="@+id/ET_country"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:hint="@string/Country"
                android:textColorHint="#b6b6b6"
                android:textColor="#b6b6b6"
                android:textSize="@dimen/_13sdp"
                android:backgroundTint="#fff"
                android:maxLines="1"
                android:gravity="center"
                android:inputType="text"
                />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_city"
            android:layout_below="@+id/card_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_36sdp"
            android:layout_marginEnd="@dimen/_36sdp"
            app:cardCornerRadius="@dimen/_18sdp"
            app:cardBackgroundColor="#fff"
            app:cardElevation="@dimen/_2sdp"
            >
            <EditText
                android:id="@+id/ET_city"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:hint="@string/City"
                android:textColorHint="#b6b6b6"
                android:textColor="#b6b6b6"
                android:textSize="@dimen/_13sdp"
                android:backgroundTint="#fff"
                android:maxLines="1"
                android:inputType="text"
                android:gravity="center"
                />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_street"
            android:layout_below="@+id/card_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_36sdp"
            android:layout_marginEnd="@dimen/_36sdp"
            app:cardCornerRadius="@dimen/_18sdp"
            app:cardBackgroundColor="#fff"
            app:cardElevation="@dimen/_2sdp"
            >
            <EditText
                android:id="@+id/ET_street"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:hint="@string/Street"
                android:textColorHint="#b6b6b6"
                android:textColor="#b6b6b6"
                android:textSize="@dimen/_13sdp"
                android:backgroundTint="#fff"
                android:maxLines="1"
                android:inputType="text"
                android:gravity="center"
                />
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/card_some_notes"
            android:layout_below="@+id/card_street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_36sdp"
            android:layout_marginEnd="@dimen/_36sdp"
            app:cardCornerRadius="@dimen/_18sdp"
            app:cardBackgroundColor="#fff"
            app:cardElevation="@dimen/_2sdp"
            >
            <EditText
                android:id="@+id/ET_some_notes"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:hint="@string/SomeNotes"
                android:textColorHint="#b6b6b6"
                android:textColor="#b6b6b6"
                android:textSize="@dimen/_13sdp"
                android:backgroundTint="#fff"
                android:maxLines="1"
                android:inputType="text"
                android:gravity="center"
                />
        </android.support.v7.widget.CardView>
        <Button
            android:id="@+id/btn_get_location"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/btn_login"
            android:layout_marginStart="@dimen/_36sdp"
            android:layout_marginEnd="@dimen/_36sdp"
            android:layout_marginTop="@dimen/_13sdp"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/_13sdp"
            android:textColor="#fff"
            android:text="@string/Get_my_location"
            android:textAllCaps="false"
            android:layout_below="@id/card_some_notes"
            android:clickable="true"
            />

        <Button
            android:id="@+id/btn_order_now"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/btn_login"
            android:layout_marginStart="@dimen/_36sdp"
            android:layout_marginEnd="@dimen/_36sdp"
            android:layout_marginTop="@dimen/_13sdp"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/_13sdp"
            android:textColor="#fff"
            android:text="@string/OrderNow"
            android:textAllCaps="false"
            android:layout_below="@id/btn_get_location"
            android:clickable="true"
            android:layout_marginBottom="@dimen/_13sdp"
            />


    </RelativeLayout>

</ScrollView>
</RelativeLayout>